Add detail File all

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="hint_add">hint_add</string>
     <string name="button_save">save</string>
     <string name="img1">img1</string>
+    <string name="button_add">Add</string>
+    <string name="welcome">WELCOME</string>
 </resources>
